# UnifiDirector

./: .gitignore  DOCS.md  README.md  UDM-PRO-MAX-SETUP.md  inventory.json.example  pyproject.toml  setup.sh
scripts/: ai_code_auditor.py  build_monolith.py
src/unifi_director/: cli_handlers.py  cli_parser.py  client_factory.py  main.py  registry.py
src/unifi_director/api_client/models/: acl_rule.py  acl_rule_action.py  acl_rule_device_filter.py  acl_rule_object.py  acl_rule_object_action.py  acl_rule_ordering.py  acl_rule_update.py  acl_rule_update_action.py  address_i_pv_4_matching.py  address_i_pv_6_matching.py  address_range_i_pv_4_matching.py  adopted_device_details.py  adopted_device_details_state.py  adopted_device_overview.py  adopted_device_overview_features_item.py  adopted_device_overview_interfaces_item.py  adopted_device_overview_page.py  adopted_device_overview_state.py  application_info.py  blackout_schedule_configuration_per_day.py  blackout_schedule_configuration_per_day_day.py  broadcasting_device_filter.py  client_action_request.py  client_action_response.py  client_details.py  client_overview.py  client_overview_page.py  compound_filter_expression.py  compound_filter_expression_operator.py  country_definition.py  country_definition_page.py  create_or_update_dns_policy.py  create_or_update_firewall_policy.py  create_or_update_firewall_policy_connection_state_filter_item.py  create_or_update_firewall_policy_ipsec_filter.py  (+352 more)
src/unifi_director/modules/: acl_manager.py  client_manager.py  cloud_manager.py  device_manager.py  dns_manager.py  firewall_manager.py  hotspot_manager.py  network_manager.py  report_manager.py  resource_manager.py  site_manager.py  switching_manager.py  system_info_manager.py  traffic_matching_manager.py  version_manager.py  wifi_manager.py
tests/: conftest.py  test_cli_handlers.py  test_cli_parser.py  test_main.py  test_registry.py  test_report_manager.py  test_version_manager.py
(+73 files in other folders)
