[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-director"
version = "2.0.0"
description = "UniFi Ops Director — NetOps CLI for managing UniFi Network Applications"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Network Administrator", email = "admin@example.com" }
]
dependencies = [
    "httpx>=0.23.1,<0.29.0",
    "attrs>=22.2.0",
    "requests>=2.31.0",
]

[project.scripts]
unifi-director = "unifi_director.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_director"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",        # Coverage reports
    "ruff>=0.9.0",              # Linting (ruff check) + formatting (ruff format)
    "mypy>=1.0.0",              # Static type checking
    "types-Markdown>=3.10",
    "types-requests>=2.32",
    "openapi-python-client>=0.21.0",
]

[tool.ruff]
line-length = 120
exclude = ["src/unifi_director/api_client"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (undefined names, unused imports)
    "W",    # pycodestyle warnings
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernize syntax for target Python version)
    "B",    # flake8-bugbear (likely bugs and design problems)
    "C4",   # flake8-comprehensions (cleaner list/dict/set comprehensions)
    "SIM",  # flake8-simplify (simplifiable code patterns)
]
ignore = [
    "E501",  # Line too long — handled by the line-length setting above
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["src/unifi_director/api_client"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
